--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
              /*여기서부터는 모바일 전용 css--------------------------------------------------------------------------  */
             @media (max-width: 830px) {
                 html {
-                    font-size: 10px;
+                    font-size: 11px;
                 }
                 div .arrow {
                     top : 21.2vh;
@@ -718,7 +718,7 @@
                         </section>
                     </div>
                     <div class="survey">
-                        <h1>여러분의 감상평을 들려주세요!</h1>
+                        <h1>감상평을 들려주세요!</h1>
                         <button class="survey-button">설문조사 <span class="material-symbols-outlined">open_in_new</span></button>
                     </div>
                     <footer>
